--- a/src/DashboardForm.form
+++ b/src/DashboardForm.form
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="DashboardForm">
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="10" left="10" bottom="10" right="10"/>
+    <margin top="20" left="20" bottom="20" right="20"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
@@ -31,7 +31,7 @@
             <border type="none"/>
             <children>
               <grid id="54be8" binding="addGradesPanel" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                <margin top="0" left="10" bottom="0" right="10"/>
+                <margin top="0" left="10" bottom="0" right="0"/>
                 <constraints>
                   <tabbedpane title="Wstawianie ocen"/>
                 </constraints>
@@ -110,7 +110,7 @@
                 </children>
               </grid>
               <grid id="a5c67" binding="gradesPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                <margin top="0" left="10" bottom="0" right="10"/>
+                <margin top="0" left="10" bottom="0" right="0"/>
                 <constraints>
                   <tabbedpane title="Moje oceny"/>
                 </constraints>
@@ -140,7 +140,7 @@
                 </children>
               </grid>
               <grid id="208aa" binding="finalGradesPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                <margin top="0" left="10" bottom="0" right="10"/>
+                <margin top="0" left="10" bottom="0" right="0"/>
                 <constraints>
                   <tabbedpane title="Oceny końcowe"/>
                 </constraints>
@@ -167,7 +167,7 @@
                 </children>
               </grid>
               <grid id="42e0a" binding="gradesReportPanel" layout-manager="GridLayoutManager" row-count="4" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                <margin top="0" left="10" bottom="0" right="10"/>
+                <margin top="0" left="10" bottom="0" right="0"/>
                 <constraints>
                   <tabbedpane title="Raport ocen"/>
                 </constraints>
@@ -244,7 +244,7 @@
           </component>
         </children>
       </grid>
-      <grid id="76bed" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="76bed" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -260,12 +260,12 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="775b5" class="javax.swing.JLabel">
+              <component id="775b5" class="javax.swing.JLabel" binding="logoLabel">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Elektroniczny system oceniania"/>
+                  <text value=""/>
                 </properties>
               </component>
             </children>
@@ -273,14 +273,14 @@
           <grid id="af1e9" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
               <component id="c367c" class="javax.swing.JLabel" binding="nameLabel">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="Imię i nazwisko"/>
@@ -288,7 +288,7 @@
               </component>
               <component id="e3de8" class="javax.swing.JLabel" binding="emailLabel">
                 <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="Adres e-mail"/>
@@ -296,7 +296,7 @@
               </component>
               <component id="9f508" class="javax.swing.JLabel" binding="roleNameLabel">
                 <constraints>
-                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="Rola"/>
@@ -304,7 +304,7 @@
               </component>
               <component id="152f3" class="javax.swing.JButton" binding="logoutButton">
                 <constraints>
-                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <borderPainted value="true"/>
@@ -314,14 +314,6 @@
               </component>
             </children>
           </grid>
-          <component id="74b4d" class="javax.swing.JSeparator">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="4" fill="2" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <orientation value="1"/>
-            </properties>
-          </component>
         </children>
       </grid>
     </children>
